--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ Intermediate
 Saved
 .vscode
 .vs
-*.VC.db
-*.opensdf
-*.opendb
-*.sdf
-*.sln
-*.suo
+.VC.db
+.opensdf
+.opendb
+.sdf
+.sln
+.suo
 .xcodeproj
 .xcworkspace
